--- a/Adjuntos/main.css
+++ b/Adjuntos/main.css
@@ -15,8 +15,9 @@ html, body {
   TYPOGRAPHY              
 -----------------------------------------*/
 
-h1,h2,h3,h4,h5,h6 {
+h1,h2,h3,h4,h5,h6,blockquote,cite {
   font-weight: 300;
+  padding: 2%,5%, 2%, 8%;
 }
 
 h1 {
@@ -49,6 +50,7 @@ p {
   font-weight: 300;
   line-height: 29px;
   letter-spacing: 0.5px;
+  padding: 5%;
 }
 
 
